# mecanum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make-eclipse-project.sh  roscore.conf  stack.xml  stack.yaml
arm/: .gitignore  README.md  arm_enable_restricted.py  arm_install_ros.py  create_sdcard.py  settings.xml
arm/gibs/: detect_arduino.sh
arm/patches/Bootloader-Builder/: 0001-Only-build-for-beagleboard.patch  0002-Add-patch-to-change-boot-delay-to-0-seconds.patch
arm/patches/Bootloader-Builder/u-boot/: 0001-Change-boot-delay-to-0-seconds.patch
arm/patches/omap-image-builder/: 0001-Only-build-Precise-image.patch  0002-Include-additioanl-packages-specified-in-settings.xm.patch  0002-Include-additional-packages-specified-in-settings.xm.patch  0003-Force-MAC-address.patch  0004-Remove-text-from-etc-flash-kernel.conf.patch  0005-Run-script-to-install-ros.patch  0006-Copy-keys-to-the-new-filesystem.patch  0006-Copy-ssh-keys-to-the-new-filesystem.patch  0007-Primary-kernel-is-on-local-filesystem.patch  only_build_precise.patch
arm/patches/stable-kernel/: 0001-Enable-pinmux-for-BeagleBoard-xM.patch
arm/scripts/: .gitignore  buildBootloader.py  buildImage.py  buildKernel.py  buildQemu.py  common.py  createCard.py  enableRestricted.py  installRos.py  installRosCore.py  installRosDeps.py  installRosMobile.py  setupCard.py
arm/scripts/patches/Bootloader-Builder/: 0001-Only-build-for-beagleboard.patch  0002-Add-patch-to-change-boot-delay-to-0-seconds.patch  0003-Add-patch-to-set-BeagleBoard-xM-pin-mux.patch
arm/scripts/patches/Bootloader-Builder/u-boot/: 0002-Configure-BeagleBoard-xM-pin-mux.patch
arm/scripts/patches/omap-image-builder/: 0001-Only-build-Precise-image.patch  0002-Include-additional-packages-specified-in-settings.xm.patch  0003-Force-MAC-address.patch  0004-Remove-text-from-etc-flash-kernel.conf.patch  0005-Copy-keys-to-the-new-filesystem.patch  0006-Primary-kernel-is-on-local-filesystem.patch  0007-Run-script-to-install-ros.patch
arm/scripts/patches/omap-image-builder/project-rootstock/: 0001-Primary-kernel-is-on-local-filesystem.patch
avr/: CMakeLists.txt  README.md  manifest.xml  rosdep.yaml
avr/include/: AddressBook.h  ArduinoAddressBook.h  ByteArray.h  ByteUtils.h  Interfaces.xml  ParamServer.h  ParamServer.tmpl.h  Subscribers.h  TinyBuffer.h  makeParamHeader.py  toggle.py  voltage.py  voltages_1.csv
avr/include/param/: fsmid.py  headerfile.py  template.py
avr/libraries/Flash/: README
avr/libraries/digitalWriteFast/: digitalWriteFast.h
avr/scripts/: GenParams.py  ParamServer.tmpl.h  paramserverTemplate.py
avr/src/: AnalogPublisher.cpp  AnalogPublisher.h  BatteryMonitor.cpp  BatteryMonitor.h  Blink.cpp  Blink.h  ByteArray.cpp  ByteArray.h  ChristmasTree.cpp  ChristmasTree.h  DigitalPublisher.cpp  DigitalPublisher.h  EventDrivenFiniteStateMachine.h  FSMVector.cpp  FSMVector.h  Fade.cpp  Fade.h  FiniteStateMachine.h  MecanumMaster.cpp  MecanumMaster.h  Mimic.cpp  Mimic.h  MotorController.cpp  MotorController.h  Sentry.cpp  Sentry.h  ServoSweep.cpp  ServoSweep.h  TinyBuffer.cpp  TinyBuffer.h  Toggle.cpp  Toggle.h  base.cpp  hardware_interface.h  main.cpp
avr_controller/: CMakeLists.txt  README.md  gpio_export_rights.sh  manifest.xml  setup_gpio_pin.sh  system_shutdown_rights.sh  thanksgiving.conf  upstart_test.conf
avr_controller/gpio_export/: .gitignore  build.sh  gpio_export.c  gpio_export.sh  setup.sh
avr_controller/include/: AVRController.h  AVRInstance.h  AVR_FSM.h  BBExpansion.h  BBExpansionPin.h  BeagleBoardAddressBook.h  ByteUtils.h  FSM.h  FSMContainer.h  GPIO.h  I2CBus.h  IMU.h  Message.h  MotorController.h  Thumbwheel.h  TinyBuffer.h
avr_controller/matlab/: LoadData.m
avr_controller/msg/: AnalogPin.msg  Battery.msg  DigitalPin.msg
avr_controller/scripts/: voltages_charging_0.csv
avr_controller/src/: .gitignore  ADXL345.h  AVRController.cpp  AVRInstance.cpp  AVRNode.cpp  AVR_FSM.cpp  BBExpansionPin.cpp  BeagleBoard.cpp  BeagleBoard.h  ByteUtils.cpp  FSM.cpp  FSMContainer.cpp  GPIO.cpp  GPIO.h  GPIOExport.cpp  I2CBus.cpp  IMU.cpp  ITG3200.h  Message.cpp  Message.h  MotorController.cpp  SentryMonitor.cpp  SentryMonitor.h  SystemShutdown.cpp  Thanksgiving.cpp  Thanksgiving.h  Thumbwheel.cpp  TinyBuffer.cpp  Upstart.cpp  Upstart.h  main.cpp  test.cpp
avr_controller/srv/: AnalogPin.srv  DigitalPin.srv
avr_controller/test/: avrtest.cpp
mecanum-electronics/: Interfaces.xml
mecanum-launch/: fix_usb.sh  install-arduino-cmake  install-ros.sh
